# omfiles-rs

./: .gitignore  Cargo.toml  README.md
.github/actions/setup/: action.yml
.github/workflows/: cache-and-setup.yml  tests.yml
benches/: om_benchmark.rs
src/: compression.rs  data_types.rs  delta2d.rs  errors.rs  lib.rs  reformat.rs  testread.rs  utils.rs
src/backend/: backends.rs  io_uring.rs
src/core/: c_defaults.rs  compression.rs  data_types.rs  delta2d.rs  dimensions.rs  header.rs  wrapped_decoder.rs
src/io/: aligned_buffer.rs  buffered_writer.rs  reader.rs  reader2.rs  reader_async.rs  reader_async_io_uring.rs  reader_utils.rs  variable.rs  variable_impl.rs  wrapped_decoder.rs  writer.rs  writer2.rs
src/om/: backends.rs  buffered_writer.rs  decoder.rs  dimensions.rs  encoder.rs  errors.rs  header.rs  mmapfile.rs  mod.rs  omfile_json.rs  reader.rs  reader2.rs  write_buffer.rs  writer.rs  writer2.rs
src/om/io/: file.rs  memory.rs  mmapfile.rs  mod.rs
tests/: errors.rs  io_uring_tests.rs  omfiles_tests.rs  test_utils.rs
