[package]
name = "omfiles-rs"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "testread"
path = "src/bin/testread.rs"

[[bin]]
name = "reformat"
path = "src/bin/reformat.rs"

[[bin]]
name = "plot"
path = "src/bin/plot.rs"

# some optimizations for binary/library size in release builds
# compare: https://github.com/johnthagen/min-sized-rust
# [profile.release]
# strip = true    # Automatically strip symbols from the binary.
# opt-level = "s" # Optimize for size.
# # lto = true      # Enable link-time optimization.
# codegen-units = 1 # Number of codegen units to use.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
omfileformatc-rs = { git = "https://github.com/terraputix/omfileformatc-rs", branch = "main" }
eframe = "0.22.0"
egui = "0.22.0"
plotters = "0.3.7"
egui-plotter = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"

[[bench]]
name = "om_benchmark"
harness = false
