[package]
name = "omfiles-rs"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "testread"
path = "src/bin/testread.rs"

[[bin]]
name = "reformat"
path = "src/bin/reformat.rs"

# some optimizations for binary/library size in release builds
# compare: https://github.com/johnthagen/min-sized-rust
# [profile.release]
# strip = true    # Automatically strip symbols from the binary.
# opt-level = "s" # Optimize for size.
# # lto = true      # Enable link-time optimization.
# codegen-units = 1 # Number of codegen units to use.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
om-file-format-sys = { git = "https://github.com/open-meteo/om-file-format", rev = "209100a6ab56d61d2a7d4c9f167e92e4b7548c46" }
ndarray = "0.16.0"
num-traits = "0.2.14"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"

[[bench]]
name = "om_benchmark"
harness = false
